@@ -43,10 +43,10 @@
 
 #define AGS_RT_PRIORITY (45)
 
-#define AGS_THREAD_HERTZ_JIFFIE (1000.0)
+#define AGS_THREAD_HERTZ_JIFFIE (250.0)
 #define AGS_THREAD_YIELD_JIFFIE (2.0)
-#define AGS_THREAD_DEFAULT_JIFFIE (1000.0)
-#define AGS_THREAD_MAX_PRECISION (1000.0)
+#define AGS_THREAD_DEFAULT_JIFFIE (250.0)
+#define AGS_THREAD_MAX_PRECISION (250.0)
 
 #define AGS_THREAD_DEFAULT_ATTACK (1.0)
 
